--- a/main.css
+++ b/main.css
@@ -1,16 +1,17 @@
 html, body {
   width: 100%;
-  height: 100%;
+  height: 90%;
   font-family: Helvetica;
   background-color: #fefefe;
+  margin: 0;
 }
 
 #wrapper {
   position: relative;
-  top: 40%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  top: 25%;
+  -webkit-transform: translateY(-40%);
+  -ms-transform: translateY(-40%);
+  transform: translateY(-40%);
   height: 30vh;
   width: 80vw;
   text-align: center;
@@ -51,7 +52,19 @@ html, body {
   background-color: #DCDCDC;
 }
 
-#listen {
+#message_listen {
+  margin: 0px 40px;
+  height: 40px;
+  width: 200px;
+  font-size: 14pt;
+  background-color: #E4C661;
+  border: none;
+  color: white;
+  cursor: pointer;
+  outline: none;
+}
+
+#emoji_listen {
   margin: 0px 40px;
   height: 40px;
   width: 200px;
@@ -69,4 +82,14 @@ html, body {
 
 #listen:active {
   background-color: #D89347;
+}
+
+#supersonic {
+  margin: 20px 5px;
+}
+
+.emoji {
+  height: 100px;
+  width: auto;
+  padding: 10px 20px;
 }
